clusters/managed/devbench/locust/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app locust
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://locust.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "Load testing"
    gethomepage.dev/icon: /icons/locust.svg
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Locust
    gethomepage.dev/weight: "50"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=locust"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`locust.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 8089
